add update delete functionality added

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,7 @@
     <string name="delete_all_tasks">Delete All Tasks</string>
     <string name="clear_search">Clear Search</string>
     <string name="no_tasks">\"No Tasks To Show!\"</string>
+    <string name="create_new_task">Create New Task</string>
+    <string name="title_label">Title</string>
+    <string name="description_label">Description</string>
 </resources>
