--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,10 +3,17 @@
     <string name="add_button">Add Button</string>
     <string name="search_tasks">Search Tasks</string>
     <string name="sort_action">Sort Tasks</string>
-    <string name="delete_all_tasks">Delete All Tasks</string>
+    <string name="delete_all_action">Delete All Tasks</string>
     <string name="clear_search">Clear Search</string>
     <string name="no_tasks">\"No Tasks To Show!\"</string>
     <string name="create_new_task">Create New Task</string>
     <string name="title_label">Title</string>
     <string name="description_label">Description</string>
+    <string name="no">No</string>
+    <string name="yes">Yes</string>
+    <string name="delete_single_task">Remove \'%1$s\'?</string>
+    <string name="delete_task_confirmation">Are You Sure You Want To Remove \'%1$s\'?</string>
+    <string name="delete_all_tasks">Remove All Tasks?</string>
+    <string name="delete_all_tasks_confirmation">Are You Sure You Want To Remove All Tasks?</string>
+
 </resources>
